# yew-rocket-app

./: .gitignore  readme.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/database/: db.rs
backend/src/routes/: users.rs
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/common/: input.rs
frontend/src/components/register/: register_form.rs
frontend/src/pages/: home.rs  mod.rs  not_found.rs  register.rs
